# pet-sim-gen

./: .gitignore  README.md  pixi.toml  pyproject.toml  sf.py
pet_sim_gen/: __init__.py  bounds.json  bounds_tools.py  examples.py  generate.py  sampler.py  stratification.py
pet_sim_gen/examples/: sf_proxy.py
