[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-sim-gen"
version = "0.1.0"
description = "Generate large, diverse Monte Carlo PET datasets (via mcgpu-pet-wrapper) for downstream ML."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    # mcgpu-pet-wrapper is GitHub-only (not on PyPI), pulled in as a direct
    # git reference. Pinned to a release tag for reproducibility.
    "mcgpu-pet-wrapper @ git+https://github.com/electronics10/mcgpu-pet-wrapper.git@v0.2.1",
]

[tool.setuptools.packages.find]
include = ["pet_sim_gen*"]